# mcp_mucking_about

./: README.md  mcp_client.py  mcp_client_HTTP.py  mcp_client_Ollama.py  mcp_client_test.py  mcp_server.py  mcp_server_HTTP.py  pyproject.toml  uv.lock_backup
