[project]
name = "mcp-rel1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.55.0",
    "llama-index>=0.12.48",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-tools-mcp>=0.2.6",
    "mcp>=1.10.1",
    "python-dotenv>=1.1.1",
]
