[project]
name = "mcp-rel1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.55.0",
    "cache>=1.0.3",
    "llama-index>=0.12.48",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-tools-mcp>=0.2.6",
    "mcp>=1.10.1",
    "mcp-server>=0.1.4",
    "openmeteo-requests>=1.5.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
]
